# QWIP-atlas

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  amad_screening.py  analyze_bouncer.py  analyze_layers.py  atlas_lib.py  build_atlas.py  finalize_census.py  merge_sae.py  pyproject.toml
.jules/: bolt.md
legacy/: README.md
legacy/modal/: extract_bouncer.py  extract_multi.py  extract_sae.py  ov_circuit_analysis.py  sae_eval.py  sub_zero_probe.py
qwip_atlas/: __init__.py  analyze_compliance_behaviour.py  analyze_layers.py  atlas_store.py  build_atlas.py  cli.py  config.py  io.py  layers.py  merge_sae.py  prompts.jsonl
qwip_atlas/extractors/: __init__.py  compliance_behaviour.py  local_census.py
