[project]
name = "qwip-atlas"
version = "0.1.0"
description = "Model-agnostic brain atlasing tools for transformer activation, bouncer, SAE, and circuit maps."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "orjson>=3.10",
]

[project.optional-dependencies]
hf = [
  "accelerate>=0.34",
  "torch>=2.5",
  "transformers>=4.51",
  "tqdm>=4.66",
]
analysis = [
  "matplotlib>=3.8",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "seaborn>=0.13",
]

[project.scripts]
qwip-atlas = "qwip_atlas.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
